--- a/resume_website/experience.html
+++ b/resume_website/experience.html
@@ -8,8 +8,13 @@
 </head>
 <body>
     <header>
-        <img src="images/profile.jpg" alt="Profile Picture" class="profile">
-        <h1>Gavin Pang</h1>
+        <div>
+            <h1>Gavin Pang</h1>
+            <p>Mathematics Major with Scientific Computing Concentration</p>
+        </div>
+        <div class="header-top">
+            <img src="images/profile.jpg" alt="Profile Picture" class="profile">
+        </div>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
