--- a/resume_website/index.html
+++ b/resume_website/index.html
@@ -8,8 +8,13 @@
 </head>
 <body>
     <header>
-        <img src="images/profile.jpg" alt="Profile Picture" class="profile">
-        <h1>Gavin Pang</h1>
+        <div>
+            <h1>Gavin Pang</h1>
+            <p>Mathematics Major with Scientific Computing Concentration</p>
+        </div>
+        <div class="header-top">
+            <img src="images/profile.jpg" alt="Profile Picture" class="profile">
+        </div>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -34,7 +39,9 @@
         </section>
     </main>
     <footer>
-        <p>Contact information: <a href="mailto:pang1@kenyon.edu">pang1@kenyon.edu</a></p>
+        <div class="footer-container">
+            <p>Contact information: <a href="mailto:pang1@kenyon.edu">pang1@kenyon.edu</a></p>
+        </div>
     </footer>
 </body>
 </html>
